objects/RTAT_Waf_Fab_Process_Option__c.object
<CustomObject>
    <description>Turn around time for each process option by FAB, Technology, Speed (num of wafers in lot), and RIT Type</description>
    <fields>
        <fullName>Location_Name__c</fullName>
        <description>Location of Site/FAB</description>
        <label>Location Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALTIS</fullName>
                </value>
                <value>
                    <fullName>BURLINGTON</fullName>
                </value>
                <value>
                    <fullName>FSK 300MM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Option__c</fullName>
        <description>Process options offered for sites/technologies</description>
        <label>Process Option</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AM-AV</fullName>
                </value>
                <value>
                    <fullName>AV</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>Dense SRAMS</fullName>
                </value>
                <value>
                    <fullName>DT</fullName>
                </value>
                <value>
                    <fullName>Dual MIM CAP</fullName>
                </value>
                <value>
                    <fullName>Dual MM CAP</fullName>
                </value>
                <value>
                    <fullName>Dual OX</fullName>
                </value>
                <value>
                    <fullName>EDRAM</fullName>
                </value>
                <value>
                    <fullName>EDRAM Pipecleaner</fullName>
                </value>
                <value>
                    <fullName>edramDZ</fullName>
                </value>
                <value>
                    <fullName>edrmDT</fullName>
                </value>
                <value>
                    <fullName>K1</fullName>
                </value>
                <value>
                    <fullName>K3</fullName>
                </value>
                <value>
                    <fullName>K4</fullName>
                </value>
                <value>
                    <fullName>K6</fullName>
                </value>
                <value>
                    <fullName>KQ</fullName>
                </value>
                <value>
                    <fullName>LOWD Device</fullName>
                </value>
                <value>
                    <fullName>LTE</fullName>
                </value>
                <value>
                    <fullName>MIM CAP</fullName>
                </value>
                <value>
                    <fullName>MLR</fullName>
                </value>
                <value>
                    <fullName>MPW</fullName>
                </value>
                <value>
                    <fullName>Multiple H-L VTs</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>Other Splits</fullName>
                </value>
                <value>
                    <fullName>Pipecleaner Lot</fullName>
                </value>
                <value>
                    <fullName>RF Features</fullName>
                </value>
                <value>
                    <fullName>TQTX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIT_Type__c</fullName>
        <description>RIt A or RIT B</description>
        <label>RIT Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speed__c</fullName>
        <description>Speed for lot (based on number of wafers in the lot)</description>
        <label>Speed</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ROCKET</fullName>
                </value>
                <value>
                    <fullName>TURBO</fullName>
                </value>
                <value>
                    <fullName>RAMP</fullName>
                </value>
                <value>
                    <fullName>NTAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAT__c</fullName>
        <description>Cycle time for a given option, AKA Turn Around Time</description>
        <label>TAT</label>
        <precision>4</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>Technology</description>
        <label>Technology</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>RTAT Waf Fab Process Option TAT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Technology__c</columns>
        <columns>Speed__c</columns>
        <columns>RIT_Type__c</columns>
        <columns>Location_Name__c</columns>
        <columns>Process_Option__c</columns>
        <columns>TAT__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PROCOPT-{0000}</displayFormat>
        <label>Waf Fab Process Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTAT Waf Fab Process Options TAT</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>